<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/ThemeDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/lg_logo"
        android:layout_height="@dimen/lg_logo"
        android:layout_marginTop="@dimen/md_offset"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/prompt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_field_empty"
        android:textSize="@dimen/sm_font"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/field_email"
        android:inputType="textEmailAddress"
        android:layout_width="@dimen/lg_logo"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"/>

    <EditText
        android:id="@+id/field_password"
        android:inputType="textPassword"
        android:layout_width="@dimen/lg_logo"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_padding"
        android:hint="@string/auth_password"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md_padding"
        android:text="@string/auth_login"
        android:textSize="@dimen/lg_font"
        android:backgroundTint="@android:color/transparent"/>

    <Button
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_login"
        android:textSize="@dimen/sm_font"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:backgroundTint="@android:color/transparent"/>
</LinearLayout>
